--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./fonts/fonts.css">
-    <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <header class="header">
@@ -26,56 +26,164 @@
       </nav>
       <a class="header__logo">
         <img
-        class="header__logo-image"
-        src="./images/logo-black.svg"
-        alt="Логотип проекта"/>
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Логотип проекта"
+        />
       </a>
       <address class="address">
-        <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a><br>
-        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
-        <span>наб. Принсенграхт 263-<br>265, Амстердам</span>
+        <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a
+        ><br />
+        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a
+        ><br />
+        <span class="address__city"
+          >наб. Принсенграхт 263-<br />265, Амстердам</span
+        >
       </address>
     </header>
     <main>
       <section class="cover">
-        <h1></h1>
-        <div class="description">
-          <p></p>
-          <button></button>
+        <div class="overlay">
+          <h1 class="cover__title">
+            <span class="aligned-text">оно</span>
+            <span class="aligned-text_center">тебе</span>
+            <span class="aligned-text_right">надо</span>
+          </h1>
+          <div class="cover__description">
+            <p class="cover__description-text">
+              Аукцион вещей, в которые никто не верил
+            </p>
+            <button class="button">сделать ставку</button>
+          </div>
         </div>
       </section>
       <section class="lots">
+        <h1 class="lost__header">лоты</h1>
         <ul class="lots__card-list">
-          <li>
-            <a>
-              <article>
-
+          <li class="lots__card-list-item card_type_film">
+            <a class="card-link">
+              <article class="card overlay__card">
+                <h2 class="card__title">
+                  фильм режиссёра, который бросил киношколу
+                </h2>
+                <p class="card__text card__text-film">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
               </article>
             </a>
           </li>
-          <li>
-            <a>
-              <article>
-
+          <li class="lots__card-list-item card_type_book">
+            <a class="card-link">
+              <article class="card overlay__card">
+                <h2 class="card__title">
+                  книга, где описан один скучный день из жизни рекламного агента
+                </h2>
+                <p class="card__text card__text-book">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
               </article>
             </a>
           </li>
-          <li>
-            <a>
-              <article>
-
+          <li class="lots__card-list-item card_type_picture">
+            <a class="card-link">
+              <article class="card overlay__card">
+                <h2 class="card__title">
+                  картина, которую повторит даже 5-летний сын маминой подруги
+                </h2>
+                <p class="card__text card__text-picture">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
               </article>
             </a>
           </li>
         </ul>
+        <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
       <section class="about">
-        <div></div>
-        <div>
-          <h1 class="about__title"></h1>
+        <div class="about__logo">
+          <img
+            class="about__logo-image"
+            src="./images/logo-white.svg"
+            alt="Логотип на черном фоне"
+          />
+        </div>
+        <div class="about__content">
+          <h2 class="about__title">об аукционе</h2>
+          <p class="about__text about__text-paragraph">
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+          </p>
+          <p class="about__text about__text-paragraph-secondare">
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря <br />
+            на критику, кажущуюся простоту или сложность, сейчас без этих лотов
+            невозможно представить современную культуру. Когда в эти вещи не
+            верил никто, продолжали верить их создатели. И сейчас эти лоты стали
+            культовыми.
+          </p>
         </div>
       </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <address class="address__footer">
+        <a class="address__link-footer" href="tel:+99995555555"
+          >+9 999 555 5555</a
+        ><br />
+        <a class="address__link-footer" href="mailto:info@sobaka.ge"
+          >info@sobaka.ge</a
+        ><br />
+        <span class="address__city">наб. Принсенграхт 263-265, Амстердам</span>
+      </address>
+      <nav class="footer__menu">
+        <ul class="footer__links-list">
+          <li class="footer__links-list-item footer__menu-link_active">
+            <a class="footer__menu-link" href="#0">главная</a>
+          </li>
+          <li class="footer__links-list-item">
+            <a class="footer__menu-link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="footer__links-list-item">
+            <a class="footer__menu-link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img src="./images/yt.svg" alt="Ютуб" />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img
+              src="./images/vk.svg"
+              alt="Вконтакте"
+            />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img
+              src="./images/pinterest.svg"
+              alt="Пинтерест"
+            />
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
