--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           alt="Логотип проекта"
         />
       </a>
-      <address class="address">
+      <address class="address address__link-contact_style">
         <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a
         ><br />
         <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a
@@ -58,7 +58,7 @@
         </div>
       </section>
       <section class="lots">
-        <h1 class="lost__header">лоты</h1>
+        <h2 class="lost__header">лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item card_type_film">
             <a class="card-link">
@@ -66,7 +66,7 @@
                 <h2 class="card__title">
                   фильм режиссёра, который бросил киношколу
                 </h2>
-                <p class="card__text card__text-film">
+                <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
                   Андерсон?
@@ -80,7 +80,7 @@
                 <h2 class="card__title">
                   книга, где описан один скучный день из жизни рекламного агента
                 </h2>
-                <p class="card__text card__text-book">
+                <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
                   рассказывается о 16 июня 1904 года и об истории литературы,
@@ -94,10 +94,10 @@
           <li class="lots__card-list-item card_type_picture">
             <a class="card-link">
               <article class="card overlay__card">
-                <h2 class="card__title">
+                <h3 class="card__title">
                   картина, которую повторит даже 5-летний сын маминой подруги
-                </h2>
-                <p class="card__text card__text-picture">
+                </h3>
+                <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
                   котиков... Сколько бы вы на такое поставили, если бы не знали,
@@ -119,27 +119,26 @@
         </div>
         <div class="about__content">
           <h2 class="about__title">об аукционе</h2>
-          <p class="about__text about__text-paragraph">
+          <p class="about__text">
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
             один аукцион. Потому что кому нужен дневник девочки-подростка или
             картина, которую может нарисовать даже ребёнок? Кому нужны все эти
             странные вещи, созданные любителями?
           </p>
-          <p class="about__text about__text-paragraph-secondare">
+          <p class="about__text">
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-            Когда-то они казались просто неудачными. Но, несмотря <br />
-            на критику, кажущуюся простоту или сложность, сейчас без этих лотов
-            невозможно представить современную культуру. Когда в эти вещи не
-            верил никто, продолжали верить их создатели. И сейчас эти лоты стали
-            культовыми.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
           </p>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <address class="address__footer">
+      <address class="address__footer address__link-contact_style">
         <a class="address__link-footer" href="tel:+99995555555"
           >+9 999 555 5555</a
         ><br />
@@ -169,18 +168,12 @@
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img
-              src="./images/vk.svg"
-              alt="Вконтакте"
-            />
+            <img src="./images/vk.svg" alt="Вконтакте" />
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img
-              src="./images/pinterest.svg"
-              alt="Пинтерест"
-            />
+            <img src="./images/pinterest.svg" alt="Пинтерест" />
           </a>
         </li>
       </ul>
